[package]
name = "atc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }

reqwest = { version = "0.12.12", features = ["cookies"] }
rpassword = "7.3.1"
scraper = "0.22.0"
tokio = { version = "1.42.0", features = ["full"] }

[dev-dependencies]
mockito = "1.6.1"
