[package]
name = "cargo-atc"
version = "0.1.0"
edition = "2021"

[target.aarch64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/mold"]

[[bin]]
name = "atc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
mockall = "0.13.1"
reqwest = { version = "0.12.12", features = ["cookies"] }
rpassword = "7.3.1"
scraper = "0.22.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"

[dev-dependencies]
mockito = "1.6.1"
assert_cmd = "2.0.16"
mockall = "0.13.1"
tempfile = "3.15.0"
serial_test = "3.2"
